Better role login control, footer font.
